Adicionar rota de filtragem de viagens
